Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115994

Duplicate character when long-pressing for accented char on macOS/webengine

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.3, 6.5.4, 6.6.1, 6.7.0 FF
    • 5.15, 6.5.0
    • WebEngine
    • None
    • macOS 13.5
    • macOS
    • 4522eef20 (dev), 6ddca2acb (6.6), dd2707678 (6.5), b25abf47c (6.5.3)

    Description

      This looks similar to https://bugreports.qt.io/browse/QTBUG-71394, but applies when using QWebEngineView. To reproduce, open the markdowneditor sample Qt app, and enter

      <textarea></textarea>
      

      on the left, so a typing box appears on the right. Focus it and hold down a, and you'll see a pop-up of available accents. Clicking on one inserts the accented character, but does not remove the unaccented character, so you end up with two characters instead of one.

      Issue also exists when using a contenteditable div.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pvarga Peter Varga
            qtdae2 Damien Elmes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes