Add ImAbsolutePosition input method query

cocoa qpa uses it.

Pick-to: 6.6.0 6.6 6.5 6.5.3
Fixes: QTBUG-115994
Change-Id: Ie9556169add96946b71299066b8db92bee23066e
Reviewed-by: Anu Aliyas <anu.aliyas@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>