src/core/render_widget_host_view_qt_delegate_client.cpp
@@ -344,6 +344,7 @@ QVariant RenderWidgetHostViewQtDelegateClient::inputMethodQuery(Qt::InputMethodQ
         }
         return QVariant();
     }
+    case Qt::ImAbsolutePosition:
     case Qt::ImCursorPosition:
         return m_cursorPosition;
     case Qt::ImAnchorPosition:
